--- a/src/components/about_us/about_us.css
+++ b/src/components/about_us/about_us.css
@@ -10,7 +10,13 @@ p {
 span {
     font-weight: bold;
     font-size: 1.1em;
+    color: #0a2472;
+    background-color: #b7e4c7;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 7px;
 }
+
 .title:hover{
     filter: drop-shadow(0 0 2em green);
 }
